--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.1.0",
     "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
